--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
 
 body {
     
-    background-color: rgb(165, 224, 224);
+    background-color: rgb(253, 255, 255);
     min-height: 100vh;
     min-width: 100vw;
     width:auto;
@@ -49,7 +49,7 @@ h1, h2, h3, button{
    margin-top: 10rem;
     color: white;
     font-size: 6vh;
-    width: 50vh;
+    /* width: 50vh; */
     border: solid 2px white;
     padding: 1.5rem 0;
 
@@ -71,6 +71,7 @@ main {
     align-items: center;
     flex-direction: column;
     text-align: center;
+    position: relative;
 }
 #main__boy {
     width: 90%;
@@ -92,7 +93,7 @@ nav {
 }
 nav div {
     color: white;
-    aspect-ratio: 4 / 1;
+    /* aspect-ratio: 4 / 1; */
     position: relative;
     margin: 2rem 0
     
@@ -191,9 +192,12 @@ footer li {
     margin: 0 0.5rem;
 }
 
+.opening h1 {
+    font-size: clamp(3rem, 2.5vw, 1.2rem);
+}
 
-
-@media screen AND (min-width:600px) {
+@media screen AND (min-width:860px) {
+   
     .opening {
         max-height: 7rem;
         background-position: center;
@@ -202,6 +206,136 @@ footer li {
         background-size: cover;
         align-self: stretch;
     }
+    main {
+        align-self: stretch;
+    }
+    footer {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-content: center;
+
+    }
+    .footer1 {
+        margin-right:10rem;
+    }
+    .footer__logo{
+        width: 20%;
+        margin: 0;
+    }
+    #extra {
+        margin:0;
+        display: flex;
+    }
+    footer li {
+        margin: 1em
+    }
+    .socials {
+        margin:16px 0 0 0;
+    }
+    footer p {
+        margin-top: 1em;
+    }
     
+    .about {
+        position: absolute;
+        align-self: center;
+        background: rgb(255, 255, 255);
+        left:50%;
+        width: 25em;
+        
+        bottom: 0px;
+
+    }
+    #main__boy {
+        align-self: flex-start;
+        margin-left: 10%;
+        width:50%;
+    }
+    nav {
+        height: 70%;
+    }
+    .creations {
+        display: flex;
+        min-height: 2rem;
+        flex-wrap:wrap;
+        width: 100%;
+        gap: 1em;
+        align-content: center;
+        justify-content: center;
+        
+        
+
+    }
+    .deep {
+        background-image:url(images/desktop/image-deep-earth.jpg) ;
+        background-size: cover;
+        
+        width: 20%;
+        height: 20rem;
     
+    }
+    .night {
+        background-image:url(images/desktop/image-night-arcade.jpg) ;
+        background-size: cover;
+        
+        width: 20%;
+        height: 20rem;
+    
+    }
+    .soccer {
+        background-image:url(images/desktop/image-soccer-team.jpg) ;
+        background-size: cover;
+        
+        width: 20%;
+        height: 20rem;
+    
+    }
+    .grid {
+        background-image:url(images/desktop/image-grid.jpg) ;
+        background-size: cover;
+        
+        width: 20%;
+        height: 20rem;
+    
+    }
+    .above{
+        background-image:url(images/desktop/image-from-above.jpg) ;
+        background-size: cover;
+        
+        width: 20%;
+        height: 20rem;
+    
+    }
+    .borealis {
+        background-image:url(images/desktop/image-pocket-borealis.jpg) ;
+        background-size: cover;
+        
+        width: 20%;
+        height: 20rem;
+    
+    }
+    .curiosity {
+        background-image:url(images/desktop/image-curiosity.jpg) ;
+        background-size: cover;
+        
+        width: 20%;
+        height: 20rem;
+    
+    }
+    .fisheye {
+        background-image:url(images/desktop/image-fisheye.jpg) ;
+        background-size: cover;
+        
+        width: 20%;
+        height: 20rem;
+    
+    }
+    h3 {
+        position: absolute;
+        bottom: 5px;
+        padding: 10px;
+        font-size: 1.1rem;
+        background: hsla(341, 10%, 0%, 0.5);
+    }
 }
